<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/primary_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_32"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                android:id="@+id/primary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/primary_default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/primary_title" />

            <TextView
                android:id="@+id/primary_default_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/primary_default_text"
                app:layout_constraintTop_toBottomOf="@+id/primary_title" />

            <RadioGroup
                android:id="@+id/primary_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/primary_default_value"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/secondary_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="@dimen/margin_32"
            app:layout_constraintTop_toBottomOf="@+id/primary_container"
            android:layout_marginBottom="@dimen/default_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/secondary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secondary"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/secondary_default_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_value"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondary_title" />

                <TextView
                    android:id="@+id/secondary_default_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/secondary_default_text"
                    app:layout_constraintTop_toBottomOf="@+id/secondary_title" />

                <RadioGroup
                    android:id="@+id/secondary_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/secondary_default_value"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:orientation="vertical" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/secondary_container"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin"
            android:weightSum="1">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginStart="@dimen/margin_32"/>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/ok"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginEnd="@dimen/margin_32"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>